--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,14 +3,15 @@
 @tailwind utilities;
 
 :root {
-    font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-text-size-adjust: 100%;
-    scroll-behavior: smooth;
-}
+	font-family: Ubuntu, Inter, Avenir, Helvetica, Arial, sans-serif;
+	font-synthesis: none;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
+	scroll-behavior: smooth;
+  }
+  
 
 html {
 	overflow-x: hidden;
